added recursion behaviour

--- a/SkillsGrading.Web/appsettings.json
+++ b/SkillsGrading.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GradingDB": "Data Source=DESKTOP-ALJK4UD\\SQLEXPRESS;Initial Catalog=GradingDB;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
