replaced sensitive data to secrets

--- a/SkillsGrading.Web/appsettings.json
+++ b/SkillsGrading.Web/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "GradingDB": "Data Source=DESKTOP-ALJK4UD\\SQLEXPRESS;Initial Catalog=GradingDB;Integrated Security=True;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
