--- a/SkillsGrading.Web/SkillsGrading.Web.csproj
+++ b/SkillsGrading.Web/SkillsGrading.Web.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7179f175-4050-418e-823d-7ba939904e92</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
