removed sensitive info

--- a/SkillsGrading.Web/appsettings.Production.json
+++ b/SkillsGrading.Web/appsettings.Production.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "GradingDB": "Host=localhost;Port=5432;Database=GradingDB;Username=postgres;Password=5102389456"
-  }
+  "AllowedHosts": "*"
 }
